# probable-octo-enigma-my_runner

./: .gitignore  CMakeLists.txt  README.md  build.sh  csfml.sh  index.html  license.html
files/: CMakeLists.txt  Makefile  build.sh  how_to_play.c  index.html  init_backgrounds.c  init_window.c  length_of_include.txt  my_runner  my_runner.c  next_frame_full.c  option_dealing.c  runner.code-workspace  settings.jsons  sfml_test.c  show_credits.c
files/csfml_lib/: .gitignore  CMakeLists.txt  Makefile  about.txt
files/include/: framebuffer.h  my_const.h  my_convert.h  my_dict.h  my_event.h  my_game_elements.h  my_key.h  my_level.h  my_maths.h  my_mouse.h  my_pixel.h  my_root.h  my_scores.h  my_sprite.h  my_text.h  my_window.h
files/level/: level1.runner  level_structure.todo
files/lib/: CMakeLists.txt  Makefile
files/lib/audio/: CMakeLists.txt  free_music.c  load_music.c  play_audio.c
files/lib/convert/: CMakeLists.txt  hex_to_255.c  length_of_an_int.c  my_get_args_for_prog.c  nb_to_char_star.c
files/lib/dict/: CMakeLists.txt  Makefile  free.c  test.c
files/lib/end/: CMakeLists.txt  Makefile
files/lib/event/: CMakeLists.txt  on_keydown.c  on_keydown_2.c
files/lib/game_assets/: CMakeLists.txt  Makefile  assing_dimensions_for_4_assets.c  load_4_assets.c
files/lib/help/: CMakeLists.txt  Makefile  help_in_general.c  help_speed.c
files/lib/image/: CMakeLists.txt  display.c  free.c  init.c  load.c
files/lib/key/: CMakeLists.txt  Makefile  backup_plan.bat
files/lib/level/: CMakeLists.txt  Comp_that.sh  Makefile  test.c  test.out
files/lib/maths/: CMakeLists.txt  calc_percent.c  exponential.c
files/lib/mouse/: CMakeLists.txt  init.c  is_in_square.c
files/lib/my/: CMakeLists.txt  Makefile(linux)  backup_plan.bat  my_showmem.c  my_sort_int_array.c
files/lib/my/compute/: my_compute_power_rec.c
files/lib/my/find/: my_find_prime_sup.c
files/lib/my/get/: my_get_content.c  my_getnbr.c
files/lib/my/in/: my_in.c  my_in_two.c
files/lib/my/is/: my_is_prime.c  my_isneg.c  my_str_islower.c
files/lib/my/str/: my_strcapitalize.c  my_strcmp.c  my_strcpy.c
files/lib/pixel/: CMakeLists.txt  Makefile
files/lib/scores/: CMakeLists.txt  init.c  refresh.c  reset.c
files/lib/silvers/: CMakeLists.txt  change_sprite.c  free.c
files/lib/sprite/: CMakeLists.txt  change_two_val.c  display.c  free.c  free_two.c  initialise_drag_axis.c  is_reset_drag_needed.c  load.c  load_and_resize.c  load_two.c  move_sprite_with_struct.c
files/lib/text/: CMakeLists.txt  animation_tracking.c  init.c  init_4_vals.c  init_description_simplified.c  init_simplified.c  init_title_simplified.c  my_rgba.c  positioning.c
files/lib/window/: CMakeLists.txt  createWindow.c
files/temp/: Comp_that.bat  animate_person.c  build.md  display_sprite_animation.c  display_sprite_animation_cleaned.c  display_sprite_animation_cleaned.c.tmp  get_events.c  get_events.c.tmp  init_backgrounds copy.c.tmp  my_events.md  my_runner  play_sound.c  play_sound.c.tmp  scores.c.tmp  test.c  title_screen  title_screen.c  title_screen_retry.c  title_screen_retry_copy.c  title_screen_retry_copy.c.tmp  to search.todo
files/temp/html/: index.html
files/temp/html copy/background/: index.html
files/temp/html copy/js/: script.js
files/temp/html copy/music/: index.html
files/temp/html/sprite/: index.html
files/temp/img/: sprite_test.xcf
files/temp/img/background/: Background.xcf  final_background_p2.xcf  ice.xcf
files/temp/img/bonuses/: coin_end_winter_matrixed.xcf
files/temp/img/enemies/: bomb.xcf  links  rocket.xcf
files/temp/img/obstacles/: ice_block.xcf  ice_cube_clock.xcf
files/temp/img/title_screen/: button_sprite.xcf
files/temp/img_ignore/all_in_one/: silver_1.xcf
files/temp/img_ignore/background/: Bckground_attemp1.xcf  Untitled.xcf  final_background_p1.xcf
files/temp/img_ignore/bonuses/: coin_winter_spritesheet.xcf
files/temp/img_ignore/enemies/: spike_ball.xcf
files/temp/img_ignore/obstacles/: ice_cube_only.xcf  snow_cap.xcf
files/temp/level/: treat_level.py
files/temp/lib/: Comp_that.sh  backup_plan.bat
files/temp/lib/audio/: Makefile  pause_audio.c  pause_music.c  play_as_sound.c
files/temp/lib/convert/: Makefile  char_star_to_nb.c  hex_to_255.c
files/temp/lib/dict/: a(safe).out  append.c  del_item.c  dict(safe).out  dict.out  get_value.c
files/temp/lib/end/: free.c  initialise.c  which_ending.c
files/temp/lib/event/: Makefile  is_in_box.c  on_keydown.c
files/temp/lib/game_assets/: assing_dim_for_an_asset.c  load_an_asset.c
files/temp/lib/help/: display_help.c  help_prog_options.c
files/temp/lib/image/: display.c  init.c
files/temp/lib/key/: display.c  on_event.c
files/temp/lib/level/: Makefile  get.c  get_sprite_name.c  get_sprite_type.c  test.c  test.out  translate.c  treat.c  treat_level.out
files/temp/lib/maths/: Makefile  randint.c  sleep.c
files/temp/lib/mouse/: analyse.c  get_pos.c
files/temp/lib/pixel/: append_pixel_to_array.c
files/temp/lib/scores/: Makefile
files/temp/lib/sprite/: Makefile  draw_two.c  dup_sprite.c  init_anim.c  initialise_sffloatrect.c  initialise_sfintrect.c  is_coliding.c  is_out_of_home.c  moove.c  move_two.c  randomise_position.c  rescale.c
files/temp/lib/text/: free.c  init.c  init_simplified.c  move.c  move_from_struct_coordinates.c  rgba.c  set_colors.c  set_more_info.c  update.c
files/temp/lib/window/: Makefile  create_framebuffer.c
files/temp/temp/: Comp_that.py  animate_person.c.tmp  comp_under_windows.md  display_sprite_animation.c.tmp  init_backgrounds copy.c  main.c  my_runner1.c  my_runner1.c.tmp  my_screensaver  resutks.txt  scores.c  stylsheet.css  title_screen.c.tmp  title_screen_retry.c.tmp
files/temp/temp/level/: gen_level.py
files/temp/temp/lib/: backup_plan.py  (+2 more)
files/test/: Comp_that.sh  how_to_play.c  init_background_overflow.c  init_backgrounds.c  init_time.c  my_runner  my_runner.c  need_to_implement.todo  option_dealing.c  title.c
files/test/include/: include_all.h  my_audio.h  my_end.h  my_help.h  my_image.h  my_lib.h  my_root.h  my_silvers.h  my_sleep.h  my_text.h  structs.h
(+150 files in other folders)
